--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,10 @@
       <id>codemc-repo</id>
       <url>https://repo.codemc.org/repository/maven-public/</url>
     </repository>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
   </repositories>
   <dependencyManagement>
     <dependencies>
@@ -148,6 +152,12 @@
           <groupId>*</groupId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>com.github.DeadSilenceIV</groupId>
+      <artifactId>AdvancedChestsAPI</artifactId>
+      <version>3.2-BETA</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.zaxxer</groupId>
